--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,15 @@
 <ngx-ui-loader></ngx-ui-loader>
 <router-outlet/>
 
+<!-- <form #formRef (submit)="onSubmit(usernameInput.value, passwordInput.value, formRef)">
+    <div>
+      <label>Username:</label>
+      <input type="text" #usernameInput />
+    </div>
+    <div>
+      <label>Password:</label>
+      <input type="password" #passwordInput />
+    </div>
+    <button type="submit">Save</button>
+  </form>
+   -->
